# colossus

./: .env  .envrc  Cargo.toml  README.md  Rocket.toml
.circleci/: config.yml
api/: Cargo.toml
api/src/: db.rs  lib.rs  types.rs
api/src/handlers/: users.rs
api/src/services/: types.rs  users.rs
domain/: Cargo.toml
domain/src/: entity.rs  lib.rs  repositories.rs  user_types.rs
domain/src/entity/: paygrades.rs  prelude.rs  ranks.rs  users.rs
domain/src/user_types/: mocks.rs
libservices/: Cargo.toml
libservices/src/: errors.rs  lib.rs  types.rs
libservices_codegen/: Cargo.toml
libservices_codegen/src/: attachable_service.rs  lib.rs
libservices_codegen/tests/: ui.rs
libservices_codegen/tests/fail/: invalid_ident.rs  invalid_ident.stderr  missing_attr.rs  missing_attr.stderr
libservices_codegen/tests/pass/: generic.rs
migrations/: 20210606165511_create_users_table.sql  20210608150325_create_paygrades_table.sql  20210608150330_create_ranks_table.sql
scripts/: init_db.sh  reload_db.sh
