[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "libapi"

[[bin]]
path = "src/bin/main.rs"
name = "api"

[dependencies]
rocket = "0.5.0-rc.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
async-graphql = { git = "https://github.com/ELD/async-graphql", branch = "master" }
