[package]
name = "domain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "json" ] }
async-trait = "0.1"
mockall = "0.9"

[dev-dependencies]
tokio = "1.0"
