[package]
name = "domain"
version = "0.1.0"
edition = "2018"
description = "domain types and repositories for the UNKSO Colussus web app"
license = "MIT"
repository = "https://github.com/UNKSO/Colossus"
keywords = ["domain", "types", "database", "sqlx", "postgres"]
categories = ["database"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mocks = ["faux"]

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "json", "chrono" ] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

faux = { version = "^0.1", optional = true }

[dev-dependencies]
faux = "^0.1"
