[package]
name = "libservices"
version = "0.1.0"
edition = "2018"
description = "Types and macros for Rocket services"
license = "MIT"
repository = "https://github.com/Unkso/Colossus"
keywords = ["web", "rocket", "api", "app"]
categories = ["web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
libservices_codegen = { path = "../libservices_codegen" }
